--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,3 @@
-# .pre-commit-config.yaml
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
@@ -13,6 +12,9 @@ repos:
         additional_dependencies:
           - flake8-docstrings
           - flake8-annotations
+        args: [--ignore=D100, D107] # Ignore:
+                                    # module docstrings
+                                    # getters and setters docstrings
 
   # - repo: https://github.com/pre-commit/mirrors-isort
   #   rev: v5.10.1
