--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,9 +12,10 @@ repos:
         additional_dependencies:
           - flake8-docstrings
           - flake8-annotations
-        args: [--ignore=D100, D107] # Ignore:
+        args: [--ignore=D100, D107, ANN101, ANN402] # Ignore:
                                     # module docstrings
                                     # getters and setters docstrings
+                                    # self does not need a type annotations
 
   # - repo: https://github.com/pre-commit/mirrors-isort
   #   rev: v5.10.1
