--- a/pre-commit/beautify.yaml
+++ b/pre-commit/beautify.yaml
@@ -5,6 +5,11 @@ repos:
       - id: isort
         args: ["--profile", "black"]
 
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.4.0  # Use the latest version available
+    hooks:
+      - id: trailing-whitespace
+
   # - repo: https://github.com/pre-commit/mirrors-mypy
   #   rev: 'v1.11.2'
   #   hooks:
