--- a/pre-commit/beautify.yaml
+++ b/pre-commit/beautify.yaml
@@ -9,6 +9,13 @@ repos:
     rev: v4.4.0  # Use the latest version available
     hooks:
       - id: trailing-whitespace
+      
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v4.0.0-alpha.8 
+    hooks:
+      - id: prettier
+        args: [--tab-width=4, --use-tabs=false]  # Configure tab width and spaces
+
 
   # - repo: https://github.com/pre-commit/mirrors-mypy
   #   rev: 'v1.11.2'
