--- a/pre-commit/beautify.yaml
+++ b/pre-commit/beautify.yaml
@@ -4,17 +4,20 @@ repos:
     hooks:
       - id: isort
         args: ["--profile", "black"]
+        files: ^(app/|autoop/)
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0  # Use the latest version available
     hooks:
       - id: trailing-whitespace
+        files: ^(app/|autoop/)
       
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v4.0.0-alpha.8 
     hooks:
       - id: prettier
         args: [--tab-width=4, --use-tabs=false]  # Configure tab width and spaces
+        files: ^(app/|autoop/)
 
 
   # - repo: https://github.com/pre-commit/mirrors-mypy
